--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,219 @@ h2 {
   font-size: 30px;
   line-height: 30px;
   }
+
+h3{
+  font-size: 12px;
+  line-height: 15px;
+ }
+
+/*HEADER*/
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.main-header {
+min-height: 72px;
+margin-bottom: 55px;
+background-color: #000000;
+}
+
+.container{
+width:940px;
+margin: 0 auto;
+padding: 0 10px; 
+}
+
+.container img {
+width: 140px;
+height: 30px;
+margin-right: 20px;
+}
+
+.main-navigation {
+float: left;
+width: 780px;
+min-height: 70px;
+}
+
+.main-navigation ul{
+  display: table;
+}
+
+.main-navigation li a{
+  color: #fff;
+  font-size: 16px;
+}
+
+.user-block{
+min-height: 70px;
+float: right;
+width: 140px;
+}
+
+.user-block a{  
+  color: #fff;
+  font-size: 16px;
+  float: left;
+}
+
+.user-block img{
+  width: 19px;
+  height: 19px;
+  padding-right: 10px;
+  }
+
+
+
+/* MAIN INDEX */
+
+.index-logo {
+  width: 368px;
+  min-height: 204px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 25px;
+}
+
+.features {
+  margin-bottom: 80px;
+}
+
+.features-item {
+  float: left;
+  width: 300px;
+  min-height: 175px;
+  margin-right: 20px;
+}
+
+.features-item:last-child {
+  margin-right: 0;
+}
+
+.index-content {
+  margin-bottom: 35px;
+  padding: 50px 80px;
+}
+
+.index-content-left {
+  float: left;
+  width: 380px;
+  min-height: 330px;
+}
+
+.index-content-right {
+  float: right;
+  width: 300px;
+  min-height: 330px;
+}
+
+/*MAIN ITEM*/
+
+.title {
+  width: 620px;
+  min-height: 36px;
+ }
+
+.breadcrumps{
+width: 630px
+min-height: 35px;
+margin-bottom: 30px;
+}
+
+.item-pics {
+float: left;
+width: 480px;
+height: 710px;
+margin: 40px 60px 30px 120px;
+}
+
+.picture-big{
+  width: 490px;
+  height: 525px;
+}
+
+.picture-small{
+width: 160px;
+height: 160px;
+}
+
+.articte{
+width: 400px;
+height: 670px;
+float: right;
+margin-right: 120px;
+margin-top: 60px;
+margin-bottom: 60px;
+}
+
+.description{
+width: 250px;
+height: 250px;
+}
+
+/* MAIN CATALOG */
+
+.sidebar {
+  float: left;
+  width: 220px;
+}
+
+.filter {
+  float: left;
+  width: 220px;
+}
+
+.catalog {
+  float: right;
+  width: 700px;
+  font-size: 0;
+  min-height: 605px;
+}
+
+.catalog-item {
+  display: inline-block;
+  width: 220px;
+  min-height: 286px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.catalog-item:nth-child(3n+3) {
+  margin-right: 0;
+}
+
+.pagination {
+  clear: both;
+  margin-left: 240px;
+  width: 700px;
+  min-height: 43px;
+}
+/*FOOTER*/
+
+.main-footer {
+  margin-top: 65px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer-contacts {
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+  min-height: 90px;
+}
+
+.footer-social {
+  float: left;
+  width: 180px;
+  min-height: 90px;
+}
+
+.footer-copyright {
+  float: right;
+  width: 180px;
+  min-height: 90px;
+}
