--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "PT Sans Narrow", Arial, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
-	color: #ffffff;
+	color: black;
   line-height: 24px;
   margin: 0;
   padding: 0;
@@ -168,7 +168,7 @@ float: right;
 width: 400px;
 margin-right: 120px;
 margin-top: 30px;
-background-color: black;
+background-color: yellow;
 }
 
 .article-item {
