--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h2 {
   line-height: 30px;
   }
 
-h3{
+h3 {
   font-size: 12px;
   line-height: 15px;
  }
@@ -37,7 +37,7 @@ background-color: #000000;
 }
 
 .container {
-width:950px;
+width: 960px;
 margin: 0 auto;
 padding: 0 10px; 
 background-color: red;
@@ -45,8 +45,8 @@ background-color: red;
 
 .logo {
 float: left;
-width: 140px;
-height: 28px;
+width: 110px;
+height: 30px;
 margin-left: 10px;
 margin-right: 20px;
 }
@@ -148,32 +148,55 @@ margin-bottom: 30px;
 
 .item-pics {
 float: left;
-width: 480px;
+width: 460px;
 height: 710px;
-margin: 40px 60px 30px 120px;
+margin: 40px 60px 20px 0px;
+padding-right: 5px;
+background: purple;
 }
 
 .picture-big {
-  width: 490px;
-  height: 525px;
+  width: 460px;
+  height: 499px;
+  padding: 0px;
 }
 
-.picture-small {
-width: 160px;
-height: 160px;
+.picture-small ul{
+float: left;
+width: 460px;
+height: 155px;
+padding: 0px;
+}
+
+.picture-small li {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.picture-small:last-child {
+  margin-right: 0;
 }
 
 .product-descript {
 float: right;
 width: 400px;
-margin-right: 120px;
-margin-top: 30px;
+margin-top: 45px;
+margin-right: 30px;
+margin-bottom: 300px;
 background-color: yellow;
 }
 
+.item-code{
+float: left;
+}
+
+.item-code li {
+  display: inline-block;
+  vertical-align: middle;
+  padding-right: 60px;
+}
 .article-item {
-display: inline-block;
-vertical-align: middle;
+float: left;
 }
 
 .description {
@@ -181,49 +204,80 @@ padding-top: 32px;
 padding-bottom: 5px;  
 }
 
-.buy {
-  display: inline-block;
-  margin-top: 20px;
-}
-
 .item-content h2 {
   padding-top: 32px;
   padding-bottom: 5px;  
 }
 
+.item-content ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; 
+}
+
+.item-content li {
+  position: relative;
+  padding-left: 20px;
+}
 
 /* MAIN CATALOG */
 
 .sidebar {
   float: left;
-  width: 220px;
+  width: 170px;
+  margin-right: 60px;
 }
 
 .filter {
   float: left;
-  width: 220px;
+  width: 170px;
 }
 
 .catalog-pagination {
   float: right;
-  width: 600px;
-  margin-right: 80px;
+  width: 700px;
+  margin-right: 0px;
   padding-top: 7px;
   background: yellow;
 }
 
 .catalog-item {
   display: inline-block;
-  vertical-align: center;
+  vertical-align: top;
   width: 220px;
-  min-height: 286px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  min-height: 290px;
+  margin-right: 0px;
+  margin-bottom: 10px;
   background-color: #ffffff;
 }
 
 .catalog-item:nth-child(3n) {
   margin-right: 0;
+}
+
+.buy{
+  display: inline-block;
+  height: 43px;
+  width: 187px;
+  margin-top: 15px;
+}
+
+.price{
+display: inline-block;
+  width: 110px;
+  background: #e5e5e5;
+}
+
+.btn{
+box-sizing: border-box;
+  width: 78px;
+  margin-left: -4px;
+  border: none;
+  background: #000000;
+}
+
+.buy a {
+  color: #ffffff;
 }
 
 .pagination {
