--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,7 @@ margin-right: 20px;
 .main-navigation {
 float: left;
 width: 640px;
-padding-left: 10px;
-padding-right: 10px;
-margin-left: 10px;
-margin-right: 50px;
+
 }
 
 .main-navigation li {
@@ -124,7 +121,7 @@ margin-right: 130px;
 
 
 .title {
-  width: 620px;
+ font-size: 30px;
   min-height: 36px;
  }
 
@@ -150,8 +147,6 @@ margin-bottom: 30px;
 float: left;
 width: 460px;
 height: 710px;
-margin: 40px 60px 20px 0px;
-padding-right: 5px;
 background: purple;
 }
 
@@ -180,9 +175,6 @@ padding: 0px;
 .product-descript {
 float: right;
 width: 400px;
-margin-top: 45px;
-margin-right: 30px;
-margin-bottom: 300px;
 background-color: yellow;
 }
 
@@ -190,23 +182,17 @@ background-color: yellow;
 float: left;
 }
 
-.item-code li {
-  display: inline-block;
-  vertical-align: middle;
-  padding-right: 60px;
-}
-.article-item {
+.available {
 float: left;
+}
+
+.article {
+  float: right;
 }
 
 .description {
 padding-top: 32px;
 padding-bottom: 5px;  
-}
-
-.item-content h2 {
-  padding-top: 32px;
-  padding-bottom: 5px;  
 }
 
 .item-content ul {
@@ -239,6 +225,10 @@ padding-bottom: 5px;
   margin-right: 0px;
   padding-top: 7px;
   background: yellow;
+}
+
+.catalog {
+   float: right;
 }
 
 .catalog-item {
