--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,13 @@ background-color: red;
 float: left;
 width: 110px;
 height: 30px;
-margin-left: 10px;
-margin-right: 20px;
+
 }
 
 .main-navigation {
 float: left;
 width: 640px;
-
+font-size: 0;
 }
 
 .main-navigation li {
@@ -63,7 +62,6 @@ width: 640px;
 }
 
 .main-navigation a {
-  padding: 26px 19px;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
@@ -72,7 +70,6 @@ width: 640px;
 .user-block{
 float: right;
 width: 140px;
-margin-right: 130px;
 }
 
 /* MAIN INDEX */
@@ -92,8 +89,7 @@ margin-right: 130px;
 .features-item {
   float: left;
   width: 300px;
-  min-height: 175px;
-  margin-right: 20px;
+  
 }
 
 .features-item:last-child {
@@ -122,25 +118,21 @@ margin-right: 130px;
 
 .title {
  font-size: 30px;
-  min-height: 36px;
  }
 
 .breadcrumps {
-width: 630px;
-min-height: 35px;
-margin-bottom: 30px;
+font-size: 0;
 }
 
 .breadcrumbs li {
   display: inline-block;
   position: relative;
   vertical-align: top;
-  padding-right: 35px;
 }
 
 .breadcrumbs a {
-  color: #000000;
-  text-decoration: none;
+color: #000000;
+text-decoration: none;
 }
 
 .item-pics {
@@ -153,14 +145,12 @@ background: purple;
 .picture-big {
   width: 460px;
   height: 499px;
-  padding: 0px;
 }
 
 .picture-small ul{
-float: left;
 width: 460px;
 height: 155px;
-padding: 0px;
+font-size: 0;
 }
 
 .picture-small li {
@@ -179,7 +169,6 @@ background-color: yellow;
 }
 
 .item-code{
-float: left;
 }
 
 .available {
@@ -187,23 +176,17 @@ float: left;
 }
 
 .article {
-  float: right;
+float: right;
 }
 
 .description {
-padding-top: 32px;
-padding-bottom: 5px;  
 }
 
 .item-content ul {
-  margin: 0;
-  padding: 0;
-  list-style: none; 
 }
 
 .item-content li {
-  position: relative;
-  padding-left: 20px;
+
 }
 
 /* MAIN CATALOG */
@@ -211,24 +194,21 @@ padding-bottom: 5px;
 .sidebar {
   float: left;
   width: 170px;
-  margin-right: 60px;
+ 
 }
 
 .filter {
-  float: left;
-  width: 170px;
+
 }
 
 .catalog-pagination {
-  float: right;
-  width: 700px;
-  margin-right: 0px;
-  padding-top: 7px;
-  background: yellow;
+
 }
 
 .catalog {
    float: right;
+   width: 700px;
+   font-size: 0;
 }
 
 .catalog-item {
@@ -239,6 +219,7 @@ padding-bottom: 5px;
   margin-right: 0px;
   margin-bottom: 10px;
   background-color: #ffffff;
+  font-size: 0;
 }
 
 .catalog-item:nth-child(3n) {
@@ -246,24 +227,22 @@ padding-bottom: 5px;
 }
 
 .buy{
-  display: inline-block;
   height: 43px;
-  width: 187px;
-  margin-top: 15px;
+  font-size: 0;
 }
 
 .price{
 display: inline-block;
-  width: 110px;
-  background: #e5e5e5;
+background: #e5e5e5;
+width: 109px;
+font-size: 16px;
 }
 
 .btn{
-box-sizing: border-box;
-  width: 78px;
-  margin-left: -4px;
-  border: none;
+  display: inline-block;
+  width: 79px;
   background: #000000;
+  font-size: 16px; 
 }
 
 .buy a {
@@ -271,30 +250,22 @@ box-sizing: border-box;
 }
 
 .pagination {
-  margin-top: 30px;
-  min-width: 230px;
   height: 48px;
-  clear: both;
+  font-size: 0;
 }
 
 .pagination li {
 display: inline-block;
-vertical-align: center;  
+vertical-align: middle;  
 }
 
 .pagination a {
-  width: 42px;
-  height: 42px;
   line-height: 42px;
-  margin-right: 5px;
   font-size: 13px;
 }
 /*FOOTER*/
 
 .main-footer {
-  margin-top: 65px;
-  padding-top: 60px;
-  padding-bottom: 40px;
 }
 
 .footer-contacts {
